# Auravyx

./: .gitattributes  .gitignore  Auravyx.rc  Auravyx.sln  Auravyx.vcxproj  Auravyx.vcxproj.filters  CMakeLists.txt  Game.rc  Game.sln  Game.vcxproj  Game.vcxproj.filters  Mouse.cpp  README.md  auravyxtest.crt  controls.txt  desktop.ini  log.,file  resource.h  script
Assets/Boot/: font.fnt  font_plain.fnt
Assets/Textures/: desktop.ini
Dependencies/Include/GL/: glu.h
Dependencies/Include/GLFW/: CMakeLists.txt
Dependencies/Include/OpenSSL/: CMakeLists.txt  opensslconf.h
Dependencies/Lib/windows/: libssl_static.lib
GameServer--------/: .vs - Shortcut.lnk  GameServer.cpp  GameServer.h  GameServer.rc  GameServer.sln  GameServer.vcxproj  GameServer.vcxproj.filters  GameServerDlg.cpp  GameServerDlg.h  resource.h
GameServer--------/res/: GameServer.rc2
Mods/MusicPlayerMod/: MusicPlayerMod.conf
Saves/bigworld/data/: c-1.-1.-1.voxc  c-1.-1.-10.voxc  c-1.-1.-11.voxc  c-1.-1.-12.voxc  c-1.-1.-13.voxc  c-1.-1.-14.voxc  c-1.-1.-15.voxc  c-1.-1.-16.voxc  c-1.-1.-17.voxc  c-1.-1.-18.voxc  c-1.-1.-19.voxc  c-1.-1.-2.voxc  c-1.-1.-20.voxc  c-1.-1.-21.voxc  c-1.-1.-22.voxc  c-1.-1.-3.voxc  c-1.-1.-6.voxc  c-1.-1.0.voxc  c-1.-1.10.voxc  c-1.-1.11.voxc  c-1.-1.12.voxc  c-1.-1.13.voxc  c-1.-1.14.voxc  c-1.-1.15.voxc  c-1.-1.16.voxc  c-1.-1.17.voxc  c-1.-1.18.voxc  c-1.-1.19.voxc  c-1.-1.20.voxc  c-1.-1.21.voxc  c-1.-1.22.voxc  c-1.-1.3.voxc  c-1.-1.4.voxc  c-1.-1.5.voxc  c-1.-1.7.voxc  c-1.-1.8.voxc  c-1.0.-1.voxc  c-1.0.-10.voxc  c-1.0.-11.voxc  c-1.0.-12.voxc  (+8002 more)
Saves/myworld/data/: c-1.-1.-4.voxc  c-1.-1.-5.voxc  c-1.-1.-7.voxc  c-1.-1.-8.voxc  c-1.-1.-9.voxc  c-1.-1.1.voxc  c-1.-1.2.voxc  c-1.-1.6.voxc  c-1.-1.9.voxc  c-1.0.-1.voxc  c-1.0.-10.voxc  c-1.0.-2.voxc  c-1.0.-3.voxc  c-1.0.-4.voxc  c-1.0.-5.voxc  c-1.0.-6.voxc  c-1.0.-7.voxc  c-1.0.-8.voxc  c-1.0.-9.voxc  c-1.0.0.voxc  c-1.0.1.voxc  c-1.0.10.voxc  c-1.0.2.voxc  c-1.0.3.voxc  c-1.0.4.voxc  c-1.0.5.voxc  c-1.0.6.voxc  c-1.0.7.voxc  c-1.0.8.voxc  c-1.0.9.voxc  c-1.1.-1.voxc  c-1.1.-10.voxc  c-1.1.-2.voxc  c-1.1.-3.voxc  c-1.1.-5.voxc  c-1.1.-6.voxc  c-1.1.-7.voxc  c-1.1.-8.voxc  c-1.1.-9.voxc  c-1.1.0.voxc  (+3734 more)
Server--------/: Client.cpp  Client.h  Packet.cpp  Packet.h  PacketMsg.cpp  Player.cpp  Player.h  Server.cpp  Server.h  Server.sln  Server.vcxproj  Server.vcxproj.filters  ServerManager.cpp  ServerManager.h  ServerStart.cpp
ServerHost/: Client.cpp  HostChunk.h  HostWorld.cpp  HostWorld.h  LogType.cpp  LogType.h  M.cpp  M.h  Packet.cpp  Packet.h  PacketChunk.cpp  PacketChunk.h  PacketMsg.cpp  PacketMsg.h  PacketPlayerPosition.cpp  PacketPlayerPosition.h  PacketTileChange.cpp  PacketTileChange.h  Player.cpp  Player.h  RCb10608  Server.cpp  Server.h  ServerHost.rc  ServerHost.sln  ServerHost.vcxproj  ServerHost.vcxproj.filters  ServerManager.cpp  ServerManager.h  ServerStart.cpp
ServerHost/AuravyxDirectoryOld/: desktop.ini  resource.h
ServerHost/AuravyxDirectoryOld/Server/: ClientManager.h  HostChunk.cpp
ServerHost/AuravyxDirectoryOld/Source - Copy/: Auravyx.cpp  Auravyx.h  pch.cpp
ServerHost/res/: ServerHost.rc2
Shaders/Base/: 2DImage.frag  2DImage.vert  Font.frag  Font.vert  Rect.frag  Rect.vert
Shaders/Regular/: 3DLine.frag  3DLine.vert  Deferred.frag  Deferred.vert  Model.frag  Model.vert  Shadow.frag  Shadow.vert  Sky.frag  Sky.vert  Voxel.frag  Voxel.vert
Source/: Auravyx.cpp  Auravyx.h  Game.cpp  pch.h
Source/Audio/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  WAVE.cpp  WAVE.h
Source/Auravyx/Audio/: Sound.cpp  Sound.h  SoundManager.cpp  SoundManager.h  WAVE.cpp  WAVE.h
Source/Auravyx/Core/: Assets.h  (+10 more)
Source/Engine/: Action.cpp  Action.h  Actions.h  Camera.cpp  Camera.h  Chat.h  Clock.cpp  Clock.h  Control.cpp  Control.h  Controller.cpp  Controller.h  Entity.cpp  Entity.h  FBO.cpp  FBO.h  GLManager.cpp  GLManager.h  GameManager.cpp  GameManager.h  GameState.cpp  GameState.h  Model.cpp  Model.h  Mouse.cpp  Mouse.h  OBJMaterial.cpp  OBJMaterial.h  OutputConsole.cpp  OutputConsole.h  State.cpp  Texture.cpp  Texture.h  ThreadManager.cpp  ThreadManager.h  Window.cpp  WindowManager.cpp  WindowManager.h
Source/GUI/: Button.cpp  Button.h  DropdownMenu.cpp  DropdownMenu.h  GUI.cpp  GUI.h  GUIContainer.cpp  GUIContainer.h  GUIContainerData.cpp  GUIContainerData.h  Image.cpp  Image.h  ListMenu.cpp  ListMenu.h  ScrollBar.cpp  ScrollBar.h  TextBox.cpp  TextBox.h
Source/Graphics/: Font.cpp  Font.h  FontChar.cpp  FontChar.h  FontLoader.cpp  FontLoader.h  FontShader.cpp  FontShader.h  GFX.cpp  GFX.h  GLContext.cpp  GLContext.h  Renderer.cpp  Renderer.h
Source/Logger/: ConsoleMessage.cpp  ConsoleMessage.h  Log.cpp  Log.h  OutputConsole.cpp  OutputConsole.h
Source/MSVC/: pch.cpp  stdafx.cpp
Source/Modify/: Mod.cpp  Mod.h  Modify.cpp  Modify.h
Source/Physics/: Physics.cpp  Physics.h  PhysicsAABB.cpp  PhysicsAABB.h  PhysicsObject.cpp  PhysicsObject.h  PhysicsPrism.cpp  PhysicsPrism.h  PhysicsSphere.cpp  PhysicsSphere.h  PhysicsTriangles.cpp  PhysicsTriangles.h  PhysicsWorld.cpp  PhysicsWorld.h
Source/Server/: Chat.cpp  ClientManager.cpp  ClientManager.h  ServerManager.cpp
Source/Shader/: DeferredShader.cpp  DeferredShader.h  ImageShader.cpp  ImageShader.h  LineShader.cpp  LineShader.h  ModelShader.cpp  ModelShader.h  RectShader.cpp  RectShader.h  Shader.cpp  Shader.h  Shaders.cpp  Shaders.h  ShadowMap.cpp  ShadowMap.h  ShadowShader.cpp  ShadowShader.h  SkyShader.cpp  SkyShader.h
Source/Utilities/: Assets.cpp  Assets.h  Clipboard.hpp  ConsoleMessage.cpp  ConsoleMessage.h  FileIO.cpp  FileIO.h  Log.cpp  Log.h  M.cpp  M.h  Matrix.cpp  Matrix.h  Matrix4f.cpp  Matrix4f.h  Profiler.cpp  Profiler.h  Quaternion.cpp  Quaternion.h  RandomNoise.cpp  RandomNoise.h  Resource.cpp  Resource.h  Settings.cpp  Settings.h  StringUtil.cpp  StringUtil.h  Util.cpp  Util.h  Vec3f.cpp  Vec3f.h  Vec4f.cpp  XMLNode.cpp  XMLNode.h  io.cpp
Source/World/: Chunk.cpp  Chunk.h  ChunkHeight.cpp  ChunkHeight.h  ChunkIO.cpp  ChunkIO.h  Voxel.cpp  Voxel.h  VoxelShader.cpp  VoxelShader.h  World.cpp  World.h
Temp/: Chat.cpp
(+264 files in other folders)
